--- a/GitHub_LibraryApp/GitHub_LibraryApp/Views/AboutPage.xaml
+++ b/GitHub_LibraryApp/GitHub_LibraryApp/Views/AboutPage.xaml
@@ -65,9 +65,9 @@
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
-                <Entry Margin="0,10,0,0" x:Name = "user_entry" Text="UserID" Completed="Entry_Completed_UserID"  BackgroundColor="{StaticResource Primary}" TextColor="White" />
-                <Entry Margin="0,10,0,0" x:Name = "pass_entry" Text="PassWord" Completed="Entry_Completed_PassWord" IsPassword="True"  BackgroundColor="{StaticResource Primary}" TextColor="White" />
-                <Button Margin="0,10,0,0" Text="アカウントデータ保存" Clicked="OnSaveCommand"  BackgroundColor="{StaticResource Primary}" TextColor="White" />
+                <Entry Margin="0,10,0,0" x:Name = "user_entry" Text="{Binding Path=UserID}" BackgroundColor="{StaticResource Primary}" TextColor="White" />
+                <Entry Margin="0,10,0,0" x:Name = "pass_entry" Text="{Binding Path=PassWord}" IsPassword="True"  BackgroundColor="{StaticResource Primary}" TextColor="White" />
+                <Button Margin="0,10,0,0" Text="アカウントデータ保存" Command="{Binding SaveCommand}"  BackgroundColor="{StaticResource Primary}" TextColor="White" />
                 <Button Margin="0,10,0,0" Text="GitHubデータ取得" Command="{Binding GitLoadCommand}" BackgroundColor="{StaticResource Primary}" TextColor="White" />
             </StackLayout>
         </ScrollView>
